# PolicyRAGv.2

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: agentic_architecture_adr.md  claude_collaboration.md  current_state.md  decision_log.md  eval_authoring.md  experiment_index.md  experiment_log.md  implementation_plan.md  opensearch_spike_note.md  optimization_loop_protocol.md  parallel_worker_protocol.md  parity_contract.md  phase1_vector_retrieval_note.md  phase2_rerank_note.md  phase3_span_packing_note.md  phase4_documents_note.md  presentation_beamer.tex  presentation_deck.md  presentation_pipeline_outline.md  presentation_snapshot.md  product_promotion_contract.md  product_serving_benchmark.md  research-log.md  retrieval_backend_spike_plan.md  retrieval_budget_sweep_note.md  tool_agent_indexed_note.md  unit_audit_log.md
frontend/: app.js  index.html  styles.css
profiles/: README.md  baseline.yaml  baseline_documents.yaml  baseline_vector.yaml  baseline_vector_documents.yaml  baseline_vector_rerank.yaml  baseline_vector_rerank_all_corpus.yaml  baseline_vector_rerank_shortlist.yaml  baseline_vector_rerank_shortlist_agentic.yaml  baseline_vector_rerank_shortlist_authority_reserve.yaml  baseline_vector_rerank_shortlist_hierarchical_context.yaml  baseline_vector_rerank_shortlist_hybrid_retry.yaml  baseline_vector_rerank_shortlist_localized_seed.yaml  baseline_vector_rerank_shortlist_narrow_contract_gate.yaml  baseline_vector_rerank_shortlist_opensearch.yaml  baseline_vector_rerank_shortlist_ranked_diverse.yaml  baseline_vector_rerank_wide.yaml  (+41 more)
(+417 files in other folders)
