[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buyers-guide-rag-clean"
version = "0.1.0"
description = "Clean Buyer’s Guide-first RAG backend for procurement guidance."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "beautifulsoup4>=4.12",
  "cohere>=5.20.7",
  "elasticsearch>=8.13.0",
  "httpx>=0.27.0",
  "instructor>=1.14.4",
  "pydantic-ai>=1.77.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1",
  "rich>=13.7.1",
  "tenacity>=8.3.0",
  "typer>=0.12.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]
eval = [
  "diskcache>=5.6.3",
  "openai>=2.29.0",
  "ragas>=0.2.5"
]
spikes = [
  "opensearch-py>=2.5.0"
]
kg = [
  "neo4j-graphrag>=1.8.0"
]

[project.scripts]
bgrag = "bgrag.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
